tests/NormalTests/paczka1/fuzzy1/20327673.err
Error in line 16: 6w0gvwWFu S630 3,0
Error in line 21: 6w0gvwWFu A712 46,4
Error in line 22: 6w0gvwWFu A905 94,9
Error in line 25: A905 A712 7,9
Error in line 19: QrSRL0VT S655 36,2
Error in line 34: A905 S630 27,11
